tests/PhiCore/compile_failure/src/core/integer/char.fail.cpp
#include <phi/core/integer.hpp>

int main()
{
    phi::integer<char> i{255};
}
